--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^4.2.0",
     "react-leaflet": "^2.7.0",
     "react-scripts": "4.0.3",
-    "timestampconvertjs": "^1.0.5",
+    "unix-timestamp": "^0.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
